--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,16 @@
   <!-- /build -->
 </head>
 
-<body>
+<body style="color: #eeeeee; margin-left: auto; margin-right: auto; text-align: center;">
   
+  <h1>Shackman</h1>
   <div id="Shackman" class="game"></div>
-
+  <p>Arrow keys to move</p>
+  <p>You are a lonely housing complex.</p>
+  <p>There are those without homes on your streets.</p>
+  <p>Swallow these humanoids whole and watch the languish inside of you.</p>
+  <p>Watch out for the cold, fires, fate, and evil clowns.</p>
+  <p>Consume funds to fight back.</p>
   <!-- build:remove -->
   <script src="http://localhost:35729/livereload.js"></script>  
   <!-- /build -->
