--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <p>Arrow keys to move</p>
   <p>You are a lonely housing complex.</p>
   <p>There are those without homes on your streets.</p>
-  <p>Swallow these humanoids whole and watch the languish inside of you.</p>
+  <p>Swallow these humanoids whole and watch them languish inside of you.</p>
   <p>Watch out for the cold, fires, fate, and evil clowns.</p>
   <p>Consume funds to fight back.</p>
   <!-- build:remove -->
